done product management

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -617,6 +617,10 @@ button:active {
 .product-table td {
     border-bottom: 1px solid #f4e8e1;
 }
+.img_book{
+    width: 50px;
+    height: 50px;
+}
 
 button {
     border: none;
@@ -663,14 +667,15 @@ button:active {
     justify-content: center;
     align-items: center;
     z-index: 1000;
-    visibility: hidden;
-    opacity: 0;
+    opacity: 0; /* Ẩn khi mở */
+    visibility: hidden; /* Ẩn khi mở */
     transition: opacity 0.3s ease, visibility 0.3s ease;
 }
 
-.modal.visible {
-    visibility: visible;
-    opacity: 1;
+.modal.show {
+    display: flex; /* Đảm bảo modal được hiển thị */
+    opacity: 1; /* Modal sẽ hiển thị với độ mờ */
+    visibility: visible; /* Hiển thị khi mở */
 }
 
 .modal-content {
@@ -715,6 +720,10 @@ button:active {
 
 .select-category{
     margin-bottom: 15px;
+}
+
+.category-book{
+    height: 32px;
 }
 
 .form-actions {
